css selectors aligned with HTML semantics fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,14 @@ body {
     background-color: #d9dcd6;
 }
 /* Header */
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -28,7 +28,7 @@ body {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -54,7 +54,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -65,18 +65,18 @@ p {
 
 /* Content */
 
-.content-box {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.main-content h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.main-content {
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -85,7 +85,7 @@ p {
     color: #ffffff;
 }
 
-.main-content img {
+article img {
     max-height: 200px;
 }
     .float-left {
@@ -99,7 +99,7 @@ p {
     }
 
 /* Benefit's sidebar */
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -110,29 +110,29 @@ p {
     background-color: #2589bd;
 }
 
-.sidebar {
+section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.sidebar h3  {
+section h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.sidebar img {
+section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
